<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLinerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnArgentin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/material_on_surface_stroke"
        android:gravity="left"
        android:onClick="setToArgent"
        android:text="@string/btnArgent"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btnBrazil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/material_on_surface_stroke"
        android:gravity="left"
        android:onClick="setToBrazil"
        android:text="@string/btnBrazil"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btnChili"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/material_on_surface_stroke"
        android:gravity="left"
        android:onClick="setToChili"
        android:text="@string/btnChili"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btnColumbia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/material_on_surface_stroke"
        android:gravity="left"
        android:onClick="setToColumbia"
        android:text="@string/btnColumbia"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp" />

    <Button
        android:id="@+id/btnUruguay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/material_on_surface_stroke"
        android:gravity="left"
        android:onClick="setToUruguay"
        android:text="@string/btnUruguay"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textSize="16sp"
        app:cornerRadius="0dp" />

</LinearLayout>
